# worleynoise

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: worleygen.h
src/: main.cpp  worleygen.cpp
